Tue Jun 28 00:08:43 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* lib/irb/workspace.rb: fix BUG#4793.

Mon Jun 27 22:06:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (consume_communication_pipe): don't use C99
	  style variable length array.

Mon Jun 27 22:04:27 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c (consume_communication_pipe): change return
	  type to void. caller doesn't use it.

Mon Jun 27 21:29:50 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.h (rb_global_vm_lock_struct): add volatile to
	  gvl->waiting. now thread_timer() access it w/o lock.

Mon Jun 27 21:16:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread_pthread.c: s/__gvl_acquire/gvl_acquire_common/ and
	  s/__gvl_release/gvl_release_common/.

Mon Jun 27 11:41:47 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* thread_pthread.c (rb_thread_create_timer_thread):
	  the type of retrun value of write(2) is ssize_t.

Mon Jun 27 09:57:02 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c (rb_thread_create_timer_thread):
	  Fixes missing initialization of oflags.

Mon Jun 27 09:07:42 2011  Koichi Sasada  <ko1@atdot.net>

	* thread_pthread.c: Stop polling in the timer thread when there are
	  no waiting thread.  If there are 2 or more runnable threads,
	  the timer thread does polling.  Avoid polling makes power save
	  for several computers (0.2W per a Ruby process, when I measured).
	  If outside-event such as signal or Thread#kill was occuerred
	  when the timer thread does not do polling, then wake-up
	  the timer thread using communication-pipe (the timer thread
	  waits this communication-pipe with select(2)).
	  The discussion about this modification can be found from the post
	  [ruby-core:33456] and other related posts.
	  Note that Eric Wong and KOSAKI Motohiro give us the huge
	  contributions for this modification.  Thanks.

	* thread_pthread.c (rb_thread_wakeup_timer_thread): add a function.