@@ -14,7 +14,7 @@ class DRbService
     DRb::ExtServManager.command[nm] = "#{@@ruby} \"#{dir}/#{nm}\""
   end
 
-  %w(ut_drb.rb ut_array.rb ut_port.rb ut_large.rb ut_safe1.rb ut_eval.rb).each do |nm|
+  %w(ut_drb.rb ut_array.rb ut_port.rb ut_large.rb ut_safe1.rb ut_eval.rb ut_eq.rb).each do |nm|
     add_service_command(nm)
   end
   @server = @@server = DRb::DRbServer.new('druby://localhost:0', @@manager, {})
